[project]
name = "psqldb"
version = "0.1.0"
description = "ARC provider plugin: PostgreSQL via asyncpg"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "typer>=0.12",
    "rich>=13.0",
]

# register() — the runtime capability (arc.boot() discovers this).
[project.entry-points."arc.plugins"]
psqldb = "psqldb:register"

# arc psqldb connect / arc psqldb status — CLI tooling (arc.plugin_cli discovers this).
[project.entry-points."arc.plugins.cli"]
psqldb = "psqldb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["psqldb"]